Closed Bug 1804270 Opened 2 years ago Closed 2 years ago

Email input fields with multiple fields aren't sanitized properly

Categories

(Core :: DOM: Forms, defect)

defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox110 --- fixed

People

(Reporter: avandolder, Assigned: avandolder)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Severity: -- → S3
Pushed by avandolder@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f2f2d5ad505b
Sanitize multiple values in an email input correctly. r=edgar
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/37461 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
Upstream PR merged by moz-wptsync-bot
See Also: → 1805357
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: