Bug 1804270 - Sanitize multiple values in an email input correctly. r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D163965